codegen/tests/ui/typed-uri-bad-type.stderr
error[E0277]: the trait bound `i32: rocket::http::uri::FromUriParam<&str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:27:23
   |
27 |     uri!(simple: id = "hi");
   |                       ^^^^ the trait `rocket::http::uri::FromUriParam<&str>` is not implemented for `i32`
   |
   = note: required by `rocket::http::uri::FromUriParam::from_uri_param`

error[E0277]: the trait bound `i32: rocket::http::uri::FromUriParam<&str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:28:18
   |
28 |     uri!(simple: "hello");
   |                  ^^^^^^^ the trait `rocket::http::uri::FromUriParam<&str>` is not implemented for `i32`
   |
   = note: required by `rocket::http::uri::FromUriParam::from_uri_param`

error[E0277]: the trait bound `i32: rocket::http::uri::FromUriParam<i64>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:29:23
   |
29 |     uri!(simple: id = 239239i64);
   |                       ^^^^^^^^^ the trait `rocket::http::uri::FromUriParam<i64>` is not implemented for `i32`
   |
   = note: required by `rocket::http::uri::FromUriParam::from_uri_param`

error[E0277]: the trait bound `S: rocket::http::uri::FromUriParam<_>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:30:31
   |
30 |     uri!(not_uri_display: 10, S);
   |                               ^ the trait `rocket::http::uri::FromUriParam<_>` is not implemented for `S`

error: aborting due to 4 previous errors

